--- a/src/main/resources/battleships/views/main-view.fxml
+++ b/src/main/resources/battleships/views/main-view.fxml
@@ -2,8 +2,17 @@
 
 <?import javafx.scene.layout.HBox?>
 
-<HBox xmlns:fx="http://javafx.com/fxml" fx:controller="battleships.controllers.MainMenuController" spacing="20">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<HBox xmlns:fx="http://javafx.com/fxml" fx:controller="battleships.controllers.MainMenuController" spacing="40" alignment="CENTER">
     <fx:include fx:id="playerGrid" source="grid-view.fxml"/>
+
+    <VBox spacing="10" alignment="CENTER">
+        <fx:include fx:id="difficultyBox" source="difficulty-view.fxml" />
+        <fx:include fx:id="placementBox" source="placement-view.fxml" />
+        <Button text="Start" prefWidth="150"/>
+    </VBox>
+
     <fx:include fx:id="enemyGrid" source="grid-view.fxml"/>
 </HBox>
 
