--- a/src/main/resources/battleships/views/grid-view.fxml
+++ b/src/main/resources/battleships/views/grid-view.fxml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.GridPane?>
 
 <GridPane xmlns:fx="http://javafx.com/fxml" fx:id="grid" xmlns="http://javafx.com/javafx"/>
-
